<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="selectedGenre"
            type="String" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_listing"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:layout_marginStart="16dp"
            android:layout_gravity="start"
            android:id="@+id/btn_select_genre"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@{selectedGenre}"

            android:textAppearance="?attr/textAppearanceHeadline2"

            app:icon="@drawable/ic_baseline_arrow_drop_down_24"
            app:iconSize="42dp"
            app:iconGravity="textEnd"
            android:gravity="center"

            android:textColor="?attr/colorOnBackground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            >

        </Button>


        <include
            android:id="@+id/error_message"
            layout="@layout/error_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_gravity="center"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_results"
            android:layout_width="0dp"

            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_outer_small"
            android:layout_marginStart="@dimen/margin_outer_small"
            android:layout_marginEnd="@dimen/margin_outer_small"
            android:layout_marginBottom="?attr/actionBarSize"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_select_genre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>