...
    <string name="detail_movie_image_descr">Movie image</string>

    <string name="overview_not_available">Overview not available yet</string>

   <!-- ListingFragment -->

    <string name="all_genres">All genres</string>

    <!-- DialogFragmentAddToCollection -->
    <string name="descr_close_add_to_collection_dialog">Close add to collection dialog</string>
    <string name="tv_heading_add_to_collection">Add to collection</string>
    <string name="add_to_collection_not_logged_in">You have to be signed in to add to a collection</string>

...
    <string name="item_already_added">%1$s already added to %2$s</string>

    <!-- Common error layout -->

    <string name="error_no_network_headline">You are offline</string>
    <string name="error_no_network_message">You have to be connected to internet to browse LGBTQ movies &amp; series</string>
    <string name="error_unknown_heading">Unknown network error occurred"</string>
    <string name="error_unknown_message">We are very sorry about this, please try again</string>
    <string name="btn_try_again">Try again</string>

    <!-- CollectionFragment  -->

    <string name="tv_heading_empty_collection">Empty collection</string>
    <string name="tv_empty_collection">Add movies &amp; series by visiting their detail page</string>

...
