<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
  >

    <data>

        <import type="com.example.qfilm.ui.adapters.GlideBindingAdapter" />
        <variable
            name="obj"
            type="com.example.qfilm.data.models.entities.Result"/>

        <variable
            name="actionButton"
            type="java.lang.Boolean" />

        <variable
            name="showOriginalTitles"
            type="Boolean"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
      >


        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="150dp"
           >

            <ImageView
                android:id="@+id/iv_poster"
                android:scaleType="fitXY"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:background="?attr/colorSecondary"
                android:src="@drawable/ic_sharp_local_movies_24"
                app:imageUrl="@{obj.posterPath}"/>

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:layout_marginStart="16dp"
           >

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                app:lineHeight="26sp"
                android:text="@{ showOriginalTitles ? obj.getOriginalTitle() : obj.getTitle()}"
                android:textAppearance="?attr/textAppearanceHeadline3" />


            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{obj.overview}"
                android:ellipsize="end"
                android:maxLines="3"
                android:textAppearance="?attr/textAppearanceBody1"
                app:lineHeight="24sp"/>

        </LinearLayout>


    </LinearLayout>


</layout>